compiler/testData/diagnostics/tests/regressions/itselfAsUpperBoundInClassNotNull.kt
// RUN_PIPELINE_TILL: SOURCE
// FIR_IDENTICAL
class MyClass<T: <!CYCLIC_GENERIC_UPPER_BOUND!>T<!>>